Fixed Overflow Problem

--- a/src/components/Pages/chat.css
+++ b/src/components/Pages/chat.css
@@ -3,7 +3,7 @@
     flex-shrink: 0;
     margin-top: 16px;
     padding: 24px;
-    border: 1px solid white;
+    border: 1px solid hidden;
 }
 
 .compose form {
@@ -50,9 +50,10 @@
 }
 .chat__messages {
     flex-grow: 1;
-    padding: 24px 24px 0 24px;
+    padding: 0px 0px 0 24px;
     overflow-y: scroll;
-
+    max-height: 320px;
+    border: 1px solid hidden;
    
 }
 
